# tetris

./: .gitignore  Cargo.toml  README.md  index.html  sw.js  tetris.js  tetris_bg.wasm
.github/workflows/: pages.yml
assets/: sw.js
src/: app.rs  block.rs  blocks.rs  board.rs  board_util.rs  board_utils.rs  consts.rs  enums.rs  game.rs  game_util.rs  lib.rs  main.rs  rules.rs  scoreboard.rs  tetris.rs  timer.rs  util.rs  worker.rs
src/block/: block_generator.rs  mod.rs
