[package]
name = "tetris"
version = "0.1.0"
edition = "2021"
authors = ["Nils Vreman <nils.vreman@gmail.com>"]


# General
[dependencies]
eframe = "0.21"
egui = "0.21"

# Web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
tracing-wasm = "0.2"
wasm-bindgen = "0.2"


[profile.release]
opt-level = 2

# Optimize all dependencies even in debug builds:
[profile.dev]
opt-level = 2
